# n-letter-wordle-cli

./: Cargo.toml  README.md  package-lock.json  package.json  pre-install.js  uninstall.js
src/: game_manager.rs  main.rs
src/pure_functions/: guess_colorizer.rs  guess_scorer.rs  keyboard_letters_colorizer.rs
src/side_effect_inputs/: args_parser.rs  text_input_handler.rs
src/side_effect_lib_wrappers/: english_word_validator.rs  get_part_of_speech_and_definition.rs  random_word_generator.rs
src/side_effect_outputs/: console_printer.rs
